--- a/Practice/index.html
+++ b/Practice/index.html
@@ -16,7 +16,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a  class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="#">About</a>
@@ -26,8 +26,11 @@
                   </li>
                 </ul>
                 <div class="cart">
+                  <a href="cart.html">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <sup>0</sup>
+                  </a>
+                 
                 </div>
               </div>
             </div>
