--- a/Basket/index.html
+++ b/Basket/index.html
@@ -60,8 +60,9 @@
                 <p class="card-text">
                     iPhone 14 Pro Max 512 GB Silver
                 </p>
-                <p class="card-price">4109.99 AZN</p>
+               
                 <a href="#" class="btn btn-primary add-basket">Add to cart</a>
+                <span class="card-price ms-5">4109.99 </span><span>AZN</span>
               </div>
             </div>
           </div>
@@ -74,8 +75,8 @@
                 <p class="card-text">
                     Samsung Galaxy S23 Ultra 
                 </p>
-                <p class="card-price">3039.99 AZN</p>
                 <a href="#" class="btn btn-primary add-basket">Add to cart</a>
+                <span class="card-price ms-5">3039.99 </span><span>AZN</span>
               </div>
             </div>
           </div>
@@ -88,8 +89,9 @@
                 <p class="card-text">
                     Honor 70 8/256 GB Silver
                 </p>
-                <p class="card-price">1149.99 AZN</p>
+                
                 <a href="#" class="btn btn-primary add-basket">Add to cart</a>
+                <span class="card-price ms-5">1149.99 </span><span>AZN</span>
               </div>
             </div>
           </div>
@@ -102,8 +104,8 @@
                 <p class="card-text">
                     Xiaomi 12 8/256 GB Purple
                 </p>
-                <p class="card-price">1139.99 AZN</p>
                 <a href="#" class="btn btn-primary add-basket">Add to cart</a>
+                <span class="card-price ms-5">1139.99 </span><span>AZN</span>
               </div>
             </div>
           </div>
